replace String#isBlank() for java 8 support (legacy is so ass idk why we even bother with this shit)